# OpenGL_Task_CMC

./: CMakeLists.txt  camera.cpp  camera.h  fragment.glsl  lampvert.glsl  main.cpp  materials.cpp  materials.h  mc_shaders.cpp  mc_shaders.h  old_main.cpp  vert.glsl
dependencies/include/: camera.h  materials.h  mc_shaders.h  objectPositions.h
dependencies/include/glad/: glad.h
resources/ame_majesty/: majesty_dn.tga  majesty_up.tga
shaders/: fragment.glsl  nmappingfragment.glsl  nmappingvert.glsl  parallaxfragment.glsl  parallaxvert.glsl  posteffectfragment.glsl  skyboxfragment.glsl  skyboxvert.glsl  vert.glsl
